# imake

./: .gitignore  .imake  LICENSE  README.md  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yml
snakypy/imake/: __init__.py
tests/: test_imake.py
